--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Unreal Engine Style Background</title>
+    <title>KPizarro - Portafolio</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
@@ -12,10 +12,11 @@
         <nav>
             <ul>
                 <li><a href="#home">Home</a></li>
-                <li><a href="#about">Sobre mi</a></li>
-                <li><a href="#experience">Experiencia Laboral</a></li>
+                <li><a href="#about">Sobre mí</a></li>
+                <li><a href="#experience">Exp Laboral</a></li>
                 <li><a href="#education">Estudios</a></li>
-                <li><a href="#contact">Contactame</a></li>
+                <li><a href="#proyects">Proyectos</a></li>
+                <li><a href="#contact">Contáctame</a></li>
             </ul>
         </nav>
     </header>
@@ -27,10 +28,52 @@
         </video>
         <div class="overlay"></div>
         <div class="content">
-            <h1>Bienvenido a mi Página</h1>
-            <p>Explora el mundo con nosotros.</p>
+            <h1>Kevin Pizarro</h1>
+            <p>Fullstack Dev/ Unreal Engine Dev</p>
             <button class="cta-button">Descubre más</button>
         </div>
+    </div>
+
+    <div class="slider-container">
+        <div class="slider">
+            <div class="slide">
+                <img src="/icon/bxl-html5.svg" alt="HTML">
+                <p>HTML</p>
+            </div>
+            <div class="slide">
+                <img src="/icon/bxl-css3.svg" alt="CSS">
+                <p>CSS</p>
+            </div>
+            <div class="slide">
+                <img src="/icon/bxl-javascript.svg" alt="JavaScript">
+                <p>JavaScript</p>
+            </div>
+            <div class="slide">
+                <img src="/icon/bootstrap-brands-solid.svg" alt="JavaScript">
+                <p>Bootstrap</p>
+            </div>
+            <div class="slide">
+                <img src="/icon/bxl-angular.svg" alt="JavaScript">
+                <p>Angular</p>
+            </div>
+            <div class="slide">
+                <img src="icon3.png" alt="JavaScript">
+                <p>NodeJS</p>
+            </div>
+            <div class="slide">
+                <img src="icon3.png" alt="JavaScript">
+                <p>SQL Oracle</p>
+            </div>
+            <div class="slide">
+                <img src="icon3.png" alt="JavaScript">
+                <p>Python</p>
+            </div>
+            <!-- Añade más slides según sea necesario -->
+        </div>
+    </div>
+
+    <div>
+        <h1>Hola mundo</h1>
     </div>
 
     <script src="script.js"></script>
