--- a/index.html
+++ b/index.html
@@ -3,79 +3,37 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>KPizarro - Portafolio</title>
+    <title>Portfolio</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <header>
-        <div class="logo">KPizarro</div>
-        <nav>
-            <ul>
-                <li><a href="#home">Home</a></li>
-                <li><a href="#about">Sobre mí</a></li>
-                <li><a href="#experience">Exp Laboral</a></li>
-                <li><a href="#education">Estudios</a></li>
-                <li><a href="#proyects">Proyectos</a></li>
-                <li><a href="#contact">Contáctame</a></li>
-            </ul>
-        </nav>
+        <div class="container">
+            <div class="logo">
+                <img src="/icon/Metagross.png" alt="Logo">
+                <span class="logo-text">KEVINP <span class="portfolio-text">Portafolio</span></span>
+            </div>
+            <nav>
+                <ul>
+                    <li><a href="#home">Home</a></li>
+                    <li><a href="#sobre-mi">Sobre Mi</a></li>
+                    <li><a href="#portfolio">Portafolio</a></li>
+                    <li><a href="#habilidades">Habilidades</a></li>
+                    <li><a href="#contacto">Contacto</a></li>
+                    <li class="language-dropdown">
+                        <a href="#idioma">
+                            <img src="/icon/globe-icon.svg" alt="Idioma" class="language-icon">
+                        </a>
+                        <ul class="dropdown-content">
+                            <li><a href="?lang=es">Español</a></li>
+                            <li><a href="?lang=en">English</a></li>
+                        </ul>
+                    </li>
+                </ul>
+                <a href="#download-cv" class="download-cv-button">Download CV</a>
+            </nav>
+        </div>
     </header>
-
-    <div class="video-container">
-        <video autoplay muted loop id="background-video">
-            <source src="test.mp4" type="video/mp4">
-            Tu navegador no soporta la reproducción de videos.
-        </video>
-        <div class="overlay"></div>
-        <div class="content">
-            <h1>Kevin Pizarro</h1>
-            <p>Fullstack Dev/ Unreal Engine Dev</p>
-            <button class="cta-button">Descubre más</button>
-        </div>
-    </div>
-
-    <div class="slider-container">
-        <div class="slider">
-            <div class="slide">
-                <img src="/icon/bxl-html5.svg" alt="HTML">
-                <p>HTML</p>
-            </div>
-            <div class="slide">
-                <img src="/icon/bxl-css3.svg" alt="CSS">
-                <p>CSS</p>
-            </div>
-            <div class="slide">
-                <img src="/icon/bxl-javascript.svg" alt="JavaScript">
-                <p>JavaScript</p>
-            </div>
-            <div class="slide">
-                <img src="/icon/bootstrap-brands-solid.svg" alt="JavaScript">
-                <p>Bootstrap</p>
-            </div>
-            <div class="slide">
-                <img src="/icon/bxl-angular.svg" alt="JavaScript">
-                <p>Angular</p>
-            </div>
-            <div class="slide">
-                <img src="icon3.png" alt="JavaScript">
-                <p>NodeJS</p>
-            </div>
-            <div class="slide">
-                <img src="icon3.png" alt="JavaScript">
-                <p>SQL Oracle</p>
-            </div>
-            <div class="slide">
-                <img src="icon3.png" alt="JavaScript">
-                <p>Python</p>
-            </div>
-            <!-- Añade más slides según sea necesario -->
-        </div>
-    </div>
-
-    <div>
-        <h1>Hola mundo</h1>
-    </div>
-
     <script src="script.js"></script>
 </body>
 </html>
