--- a/index.html
+++ b/index.html
@@ -39,10 +39,10 @@
             <h3>Desarrollador FullStack <span class="texto-multiple">/</span> Desarrollador de Unreal Engine</h3>
             <p>Soy apasionado por la tecnología y el diseño, con experiencia en el desarrollo
                 de soluciones web atractivas y eficientes. Mi objetivo es brindar una experiencia
-                de usuario excepcional a través de la combinación de arte y tecnología. Creo que
+                de usuario excepcional a través de la combinación de arte y tecnología. <span> "Creo que
                 hoy en día la tecnología y el arte pueden coexistir de una manera brillante y
                 hermosa, entregando nuevas experiencias tanto para desarrolladores como para
-                usuarios.</p>
+                usuarios."</span></p>
         </div>
         
         <div class="home-img">
