--- a/index.html
+++ b/index.html
@@ -52,6 +52,37 @@
             <video src="TestUnreal.mp4" autoplay loop muted></video>
         </div>
     </section>
+
+    <section class="technologies" id="technologies">
+        <h1>Resumen de Tecnologías</h1>
+        <div class="slider">
+            <div class="slide-track">
+                <div class="slide"><i class='bx bxl-html5 icon'></i><p>HTML</p></div>
+                <div class="slide"><i class='bx bxl-css3 icon'></i><p>CSS</p></div>
+                <div class="slide"><i class='bx bxl-javascript icon'></i><p>Javascript</p></div>
+                <div class="slide"><i class='bx bxl-python icon'></i><p>Python</p></div>
+                <div class="slide"><i class='bx bxl-nodejs icon'></i><p>NodeJS</p></div>
+                <div class="slide"><i class='bx bxl-angular icon'></i><p>Angular</p></div>
+                <div class="slide"><i class='bx bxl-c-plus-plus icon'></i><p>C++</p></div>
+                <div class="slide"><i class='bx bxl-bootstrap icon'></i><p>Bootstrap</p></div>
+                <div class="slide"><i class='bx bxl-github icon'></i><p>GitHub</p></div>
+                <div class="slide"><i class='bx bxl-adobe icon'></i><p>Adobe Suite</p></div>
+                <div class="slide"><i class='bx bxl-blender icon'></i><p>Blender</p></div>
+                <!-- Repetir los slides para el efecto continuo -->
+                <div class="slide"><i class='bx bxl-html5 icon'></i><p>HTML</p></div>
+                <div class="slide"><i class='bx bxl-css3 icon'></i><p>CSS</p></div>
+                <div class="slide"><i class='bx bxl-javascript icon'></i><p>Javascript</p></div>
+                <div class="slide"><i class='bx bxl-python icon'></i><p>Python</p></div>
+                <div class="slide"><i class='bx bxl-nodejs icon'></i><p>NodeJS</p></div>
+                <div class="slide"><i class='bx bxl-angular icon'></i><p>Angular</p></div>
+                <div class="slide"><i class='bx bxl-c-plus-plus icon'></i><p>C++</p></div>
+                <div class="slide"><i class='bx bxl-bootstrap icon'></i><p>Bootstrap</p></div>
+                <div class="slide"><i class='bx bxl-github icon'></i><p>GitHub</p></div>
+                <div class="slide"><i class='bx bxl-adobe icon'></i><p>Adobe Suite</p></div>
+                <div class="slide"><i class='bx bxl-blender icon'></i><p>Blender</p></div>
+            </div>
+        </div>
+    </section>
     
 
     <script src="script.js"></script>
