--- a/index.html
+++ b/index.html
@@ -39,10 +39,10 @@
         <div class="home-content">
             <h3>Hola!, yo soy</h3>
             <h1>Kevin Pizarro</h1>
-            <h3>Desarrollador FullStack <span class="texto-multiple">/</span> Desarrollador de Unreal Engine</h3>
+            <h3>Desarrollador FullStack <span class="texto-multiple portfolio-text" >/</span> Desarrollador de Unreal Engine</h3>
             <p>Soy apasionado por la tecnología y el diseño, con experiencia en el desarrollo
                 de soluciones web atractivas y eficientes. Mi objetivo es brindar una experiencia
-                de usuario excepcional a través de la combinación de arte y tecnología. <span> "Creo que
+                de usuario excepcional a través de la combinación de arte y tecnología. <span class="portfolio-text"> "Creo que
                 hoy en día la tecnología y el arte pueden coexistir de una manera brillante y
                 hermosa, entregando nuevas experiencias tanto para desarrolladores como para
                 usuarios."</span></p>
@@ -54,6 +54,7 @@
     </section>
 
     <section class="technologies" id="technologies">
+        <hr class="divisor">
         <h1>Resumen de Tecnologías</h1>
         <div class="slider">
             <div class="slide-track">
@@ -82,7 +83,71 @@
                 <div class="slide"><i class='bx bxl-blender icon'></i><p>Blender</p></div>
             </div>
         </div>
+        <hr class="divisor">
     </section>
+
+    <section class="presentation">
+        <div class="about-me-section">
+          <div class="about-me-content">
+            <img src="img/foto.jpg" alt="Kevin Pizarro" class="profile-img">
+            <div class="text-content">
+              <h2>Sobre mi</h2>
+              <h3>Kevin Pizarro</h3>
+              <p class="about-me-text">
+                "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."
+                <span class="more-text">
+                  "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."
+                </span>
+              </p>
+              <button class="read-more-btn">Saber Mas</button>
+              <button class="show-pdf-btn">Formacion</button>
+              <button class="show-experience-btn">Experiencia Laboral</button>
+              <div class="social-buttons">
+                <a href="https://www.linkedin.com/in/kevin-pizarro" target="_blank" class="social-btn linkedin"><i class='bx bxl-linkedin-square'></i> LinkedIn</a>
+                <a href="https://github.com/KPBaldur" target="_blank" class="social-btn github"><i class='bx bxl-github'></i> GitHub</a>
+                <a href="https://www.instagram.com/kevinp_ux_ui/" target="_blank" class="social-btn instagram"><i class='bx bxl-instagram'></i> Instagram</a>
+                <a href="https://www.behance.net/kevinpizarro1" target="_blank" class="social-btn behance"><i class='bx bxl-behance'></i> Behance</a>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+
+      <section class="portfolio">
+        <h2>Portafolio</h2>
+        <div class="projects">
+
+          <div class="project-card">
+            <img src="img/Portafolio_2022.png" alt="Portafolio_2022">
+            <div class="project-details">
+              <h3>Portafolio 2022</h3>
+              <p>HTML / CSS / JS</p>
+              <p>Primer Protafolio con conocimientos basicos de front.</p>
+              <div class="project-buttons">
+                <a href="https://kpbaldur.github.io/Portfolio2022/" target="_blank" class="btn github"><i class='bx bxl-github'></i>Github</a>
+                <a href="https://kpbaldur.github.io/Portfolio2022/" target="_blank" class="btn pagina"><i class='bx bx-world'></i>Pagina</a>
+              </div>
+            </div>
+          </div>
+          <!-- Repite el bloque project-card para cada proyecto -->
+
+          <div class="project-card"></div>
+            <img src="img/Petshop-Ecommerce.png" alt="Petshop-Ecommerce">
+            <div class="project-details">
+              <h3>Petshop prueba</h3>
+              <p>HTML / CSS / JS / Bootstrap</p>
+              <!--<p>Front de pagina Petshop realizado con Bootstrap y stack basico de programacion web.</p> -->
+              <div class="project-buttons">
+                <a href="https://github.com/KPBaldur/Petshop-website" target="_blank" class="btn github"><i class='bx bxl-github'></i>Github</a>
+                <a href="https://kpbaldur.github.io/Petshop-website/" target="_blank" class="btn pagina"><i class='bx bx-world'></i>Pagina</a>
+              </div>
+            </div>
+          </div>
+
+
+
+        </div>
+      </section>
     
 
     <script src="script.js"></script>
