Subida de Proyecto Calculadora JS

--- a/index.html
+++ b/index.html
@@ -175,6 +175,19 @@
                     </div>
                 </div>
             </div>
+
+            <div class="project-card">
+                <img src="img/CalculadoraBasica.png" alt="Petshop">
+                <div class="project-details">
+                    <h3>Calculadora Basica JS</h3>
+                    <p>HTML / CSS / JS</p>
+                    <p>Calculadora en JS con elementos basicos de interaccion con el backend.</p>
+                    <div class="project-buttons">
+                        <a href="https://github.com/KPBaldur/CalculaDoraJS" target="_blank" class="btn github"><i class='bx bxl-github'></i>Github</a>
+                        <a href="https://kpbaldur.github.io/CalculaDoraJS/" target="_blank" class="btn pagina"><i class='bx bx-world'></i>Pagina</a>
+                    </div>
+                </div>
+            </div>
     
             <div class="project-card">
                 <img src="img/Sun_Moon.png" alt="Petshop">
