--- a/index.html
+++ b/index.html
@@ -102,6 +102,7 @@
               <button class="show-pdf-btn">Formacion</button>
               <button class="show-experience-btn">Experiencia Laboral</button>
               <div class="social-buttons">
+                <a href="https://www.youtube.com/@Baldur-Dev-Arts/" target="_blank" class="social-btn youtube"><i class='bx bxl-youtube'></i>Youtube</a>
                 <a href="https://www.linkedin.com/in/kevin-pizarro" target="_blank" class="social-btn linkedin"><i class='bx bxl-linkedin-square'></i> LinkedIn</a>
                 <a href="https://github.com/KPBaldur" target="_blank" class="social-btn github"><i class='bx bxl-github'></i> GitHub</a>
                 <a href="https://www.instagram.com/kevinp_ux_ui/" target="_blank" class="social-btn instagram"><i class='bx bxl-instagram'></i> Instagram</a>
@@ -299,6 +300,10 @@
                 <i class="fas fa-code"></i>
                 <h3>Desarrollo Web</h3>
                 <p>Creación de sitios web modernos y funcionales utilizando las últimas tecnologías.</p>
+                <p>Creación de sitios web modernos y funcionales utilizando las últimas tecnologías.</p>
+                <p>Creación de sitios web modernos y funcionales utilizando las últimas tecnologías.</p>
+                <p>Creación de sitios web modernos y funcionales utilizando las últimas tecnologías.</p>
+                <p>Creación de sitios web modernos y funcionales utilizando las últimas tecnologías.</p>
                 <a href="#" class="more-info-btn">Más Información</a>
             </div>
             <div class="service-card">
@@ -313,11 +318,28 @@
                 <p>Aplicaciones móviles personalizadas para Android e iOS.</p>
                 <a href="#" class="more-info-btn">Más Información</a>
             </div>
-            <!-- Añade más tarjetas de servicio según sea necesario -->
+            <!-- Añadir tarjetas desde aqui -->
         </div>
     </section>
     
-
+    <div class="contact-container">
+        <div class="contact-form">
+            <h1>Contacto</h1>
+            <form action="#" method="post">
+                <input type="text" name="nombre" placeholder="Nombre" required>
+                <input type="text" name="asunto" placeholder="Asunto mensaje" required>
+                <div class="inline-inputs">
+                    <input type="number" name="numero" placeholder="Número" required>
+                    <input type="email" name="correo" placeholder="Correo" required>
+                </div>
+                <textarea name="mensaje" placeholder="Mensaje" required></textarea>
+                <button type="submit">Enviar</button>
+            </form>
+        </div>
+        <div class="contact-image">
+            <img src="img/Contact.jpg" alt="Imagen de contacto">
+        </div>
+    </div>
 
     <script src="script.js"></script>
 </body>
