--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <header>
         <div class="container">
             <div class="logo">
-                <img src="/icon/Metagross.png" alt="Logo">
+                <img src="icon/Metagross.png" alt="Logo">
                 <span class="logo-text">KEVINP <span class="portfolio-text">Portafolio</span></span>
             </div>
             <i class='bx bx-menu' id="menu-icon"></i>
