--- a/index.html
+++ b/index.html
@@ -299,23 +299,16 @@
             <div class="service-card">
                 <i class="fas fa-code"></i>
                 <h3>Desarrollo Web</h3>
-                <p>Creación de sitios web modernos y funcionales utilizando las últimas tecnologías.</p>
-                <p>Creación de sitios web modernos y funcionales utilizando las últimas tecnologías.</p>
-                <p>Creación de sitios web modernos y funcionales utilizando las últimas tecnologías.</p>
-                <p>Creación de sitios web modernos y funcionales utilizando las últimas tecnologías.</p>
-                <p>Creación de sitios web modernos y funcionales utilizando las últimas tecnologías.</p>
+                <p>Creacion de sitios web modernos y funcionales, utilizando las ultimas tecnologías para una experiencia de usuario unica.</p>
+                <p>Cotiza una sesion para poder comenzar con el desarrollo de tu pagina web partiendo desde un prototipo interactivo, para poder añadir o corregir elementos de diseño final del proyecto antes de comenzar con su desarrollo.</p>
                 <a href="#" class="more-info-btn">Más Información</a>
             </div>
             <div class="service-card">
                 <i class="fas fa-paint-brush"></i>
                 <h3>Diseño Gráfico</h3>
-                <p>Diseños atractivos y profesionales para tu marca o proyecto.</p>
-                <a href="#" class="more-info-btn">Más Información</a>
-            </div>
-            <div class="service-card">
-                <i class="fas fa-mobile-alt"></i>
-                <h3>Desarrollo de Apps</h3>
-                <p>Aplicaciones móviles personalizadas para Android e iOS.</p>
+                <p>Pida su cotizacion de diversos servicios de diseño grafico.</p>
+                <p>Desde diseño de logotipos, panfletos, invitaciones para cumpleaños, tarjetas de presentacion, modelos para productos de redes sociales, sliders de redes sociales entre otros servicios.</p>
+                <p>Son algunos de los servicios que ofresco, permitase de consultar sin compromiso.</p>
                 <a href="#" class="more-info-btn">Más Información</a>
             </div>
             <!-- Añadir tarjetas desde aqui -->
