--- a/index.html
+++ b/index.html
@@ -297,15 +297,15 @@
         <p>Ofrezco una variedad de servicios para ayudarte a alcanzar tus objetivos. Desde desarrollo web hasta diseño gráfico, cada servicio está diseñado para brindarte la mejor calidad y resultados.</p>
         <div class="services-grid">
             <div class="service-card">
-                <i class="fas fa-code"></i>
                 <h3>Desarrollo Web</h3>
+                <i class='bx bx-code-alt'></i>
                 <p>Creacion de sitios web modernos y funcionales, utilizando las ultimas tecnologías para una experiencia de usuario unica.</p>
                 <p>Cotiza una sesion para poder comenzar con el desarrollo de tu pagina web partiendo desde un prototipo interactivo, para poder añadir o corregir elementos de diseño final del proyecto antes de comenzar con su desarrollo.</p>
                 <a href="#" class="more-info-btn">Más Información</a>
             </div>
             <div class="service-card">
-                <i class="fas fa-paint-brush"></i>
                 <h3>Diseño Gráfico</h3>
+                <i class='bx bx-palette'></i>
                 <p>Pida su cotizacion de diversos servicios de diseño grafico.</p>
                 <p>Desde diseño de logotipos, panfletos, invitaciones para cumpleaños, tarjetas de presentacion, modelos para productos de redes sociales, sliders de redes sociales entre otros servicios.</p>
                 <p>Son algunos de los servicios que ofresco, permitase de consultar sin compromiso.</p>
