--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <header>
         <div class="container">
             <div class="logo">
-                <img src="icon/Metagross.png" alt="Logo">
+                <img src="img/icon/Metagross.png" alt="Logo">
                 <span class="logo-text">KEVINP <span class="portfolio-text">Portafolio</span></span>
             </div>
             <i class='bx bx-menu' id="menu-icon"></i>
@@ -38,17 +38,23 @@
         <div class="home-content">
             <h3>Hola!, yo soy</h3>
             <h1>Kevin Pizarro</h1>
-            <h3>Desarrollador FullStack <span class="texto-multiple portfolio-text" >/</span> Desarrollador de Unreal Engine</h3>
-            <p>Soy apasionado por la tecnología y el diseño, con experiencia en el desarrollo
-                de soluciones web atractivas y eficientes. Mi objetivo es brindar una experiencia
-                de usuario excepcional a través de la combinación de arte y tecnología. <span class="portfolio-text"> "Creo que
-                hoy en día la tecnología y el arte pueden coexistir de una manera brillante y
-                hermosa, entregando nuevas experiencias tanto para desarrolladores como para
-                usuarios."</span></p>
+            <h3>Desarrollador FullStack <span class="texto-multiple portfolio-text"> / </span>Desarrollador Software</h3>
+            <h3>Desarrollador de Unreal Engine</h3>
+            <p>
+                Especialista en desarrollo Web, desarrollo de software con soluciones creativas y atractivas, con metodologias de experiencia de usuario.
+                <span class="portfolio-text">
+                    "creo que hoy en dia la tecnologia y el arte pueden coexistir de una manera brillante y hermosa, entregando nuevas
+                    experiencias tanto para desarrolladores como para usuarios."
+                </span>
+            </p>
         </div>
-        
-        <div class="home-img">
-            <video id="home-video" src="TestUnreal.mp4" autoplay loop muted></video>
+    
+        <div class="home-video-container">
+            <video id="home-video" src="img/video/TestUnreal.mp4" autoplay loop muted></video>
+            <button class="mute-button" (click)="toggleMute()">
+                <i *ngIf="isMuted" class="fas fa-volume-mute"></i>
+                <i *ngIf="!isMuted" class="fas fa-volume-up"></i>
+            </button>
         </div>
     </section>
 
@@ -333,6 +339,39 @@
             <img src="img/Contact.jpg" alt="Imagen de contacto">
         </div>
     </div>
+
+    <footer>
+        <div class="footer-container">
+            <div class="footer-left">
+                <h2>KEVIN P <span class="portfolio-highlight">Portfolio</span></h2>
+                <p>Fullstack Developer</p>
+                <p>Unreal Engine Developer</p>
+            </div>
+            <nav class="footer-nav">
+                <ul>
+                    <li><a href="#home">Home</a></li>
+                    <li><a href="#about-me">Sobre mi</a></li>
+                    <li><a href="#portafolio">Portafolio</a></li>
+                    <li><a href="#servicios">Servicios</a></li>
+                    <li><a href="#contacto">Contacto</a></li>
+                </ul>
+            </nav>
+            <div class="footer-right">
+                <a href="CVKevinPizarro2024.pdf" download="CVKevinPizarro2024.pdf" class="download-cv">Download CV</a>
+            </div>
+        </div>
+        <div class="footer-bottom">
+            <div class="social-media">
+                <a href="https://www.linkedin.com/in/kevin-pizarro" target="_blank" class="linkedin"><i class='bx bxl-linkedin-square'></i></a>
+                <a href="https://github.com/KPBaldur" target="_blank" class="github"><i class='bx bxl-github'></i></a>
+                <a href="https://www.youtube.com/@Baldur-Dev-Arts/" target="_blank" class="youtube"><i class='bx bxl-youtube'></i></a>
+                <a href="https://www.behance.net/kevinpizarro1" target="_blank" class="behance"><i class='bx bxl-behance'></i></a>
+                <a href="https://www.instagram.com/kevinp_ux_ui/" target="_blank" class="instagram"><i class='bx bxl-instagram'></i></a>
+            </div>
+            <p>©Copyright. All rights reserved.</p>
+        </div>
+        <button (click)="scrollToTop()" class="scroll-top-btn" *ngIf="showScrollTopBtn"><i class='bx bx-up-arrow-alt'></i></button>    
+    </footer>
 
     <script src="script.js"></script>
 </body>
