--- a/Portfolio2024/src/index.html
+++ b/Portfolio2024/src/index.html
@@ -2,10 +2,11 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>Portfolio2024</title>
+  <title>Kevin Pizarro Portfolio 2024</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
+  <link rel="icon" type="image/x-icon" href="../assets/icon/Metagross.png">
 </head>
 <body>
   <app-root></app-root>
