--- a/Portfolio2024/src/index.html
+++ b/Portfolio2024/src/index.html
@@ -11,4 +11,5 @@
 <body>
   <app-root></app-root>
 </body>
+<script src="https://kit.fontawesome.com/b918cc0237.js" crossorigin="anonymous"></script>
 </html>
